update home page

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -28,7 +28,7 @@
 
         <main class="px-3">
             <h1>YelpCamp</h1>
-            <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur voluptates excepturi sapiente? Libero magnam in sequi officia esse. Quam nisi suscipit dicta odio a fugiat dolores deleniti, perspiciatis quas nihil.</p>
+            <p class="lead">A website for sharing information and comments of various camping sites.<br>Start Camping Today!</p>
             <a href="/campgrounds" class="btn btn-lg btn-secondary font-weight-bold ">View Campgrounds</a>
         </main>
 
